# clean-editor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/cmake/: CleanEditorConfig.cmake.in
lib/public/: abstract-editor-model.h  document-handler.h  documents-model.h  editor-model.h  editor-router.h  file-handler.h  file-navigation-controller.h  file-navigation-router.h  globals.h  main-controller.h  main-router.h  menu-controller.h  menu-model.h  menu-router.h
lib/public/controllers/: editor-controller.h  file-navigation-controller.h  main-controller.h  menu-controller.h
lib/public/models/: abstract-editor-model.h  documents-model.h  editor-model.h  file-navigation-model.h  menu-model.h
lib/src/: abstract-editor-model.cpp  document-handler.cpp  documents-model.cpp  editor-model.cpp  editor-router.cpp  file-handler.cpp  file-navigation-controller.cpp  file-navigation-router.cpp  main-controller.cpp  main-router.cpp  menu-controller.cpp  menu-model.cpp  menu-router.cpp
lib/src/controllers/: editor-controller.cpp  file-navigation-controller.cpp  main-controller.cpp  menu-controller.cpp
lib/src/models/: abstract-editor-model.cpp  documents-model.cpp  editor-model.cpp  file-navigation-model.cpp  menu-model.cpp
lib/tests/: CMakeLists.txt
lib/tests/src/: document-handler-tests.cpp  document-handler-tests.h  documents-model-tests.cpp  documents-model-tests.h  file-handler-tests.cpp  file-handler-tests.h  main.cpp  test-runner.cpp  test-runner.h
ui-qml/: CMakeLists.txt  qtquickcontrols2.conf  resources.qrc  views.qrc
ui-qml/components/: EditorComponent.qml  FileNavigationComponent.qml  MenuComponent.qml  qmldir
ui-qml/src/: line-numbers.cpp  line-numbers.h  main.cpp  qml-editor-model.cpp  qml-editor-model.h
ui-qml/styles/: MenuToolButton.qml  Style.qml
ui-qml/views/: DashboardView.qml  FilesNavigationView.qml  MainView.qml  MenuView.qml  OpenedFileView.qml  SplashView.qml
